<resources>
    <string name="app_name">Mid Assignment</string>
    <string name="welcome">Welcome Brilliant</string>
    <string name="fill_this_form">Please FIll Up This Form Quickly</string>
    <string name="name">Your Name (According to NSU ID)</string>
    <string name="id">Your Student ID</string>
    <string name="birth">Select Your Date of Birth</string>
    <string name="nid">Your NID No.</string>
    <string name="school">Select Your School</string>
    <string name="Department">Select Your Department</string>

    <string name="next_button">Next</string>
    <string name="view_button">View All</string>
    <string name="save_button">Save</string>

    <string name="drop_down">Drop Down</string>
    <string name="contact">Contact Details</string>
    <string name="search">Search Here</string>
    <string name="phone">Your Phone Number</string>
    <string name="present_address">Present Address</string>
    <string name="country">Country</string>
    <string name="district">District</string>
    <string name="post_office">Post Office</string>
    <string name="police_station">Police Station</string>
    <string name="postal_code">Postal Code</string>
    <string name="house">House/Village/City</string>
    <string name="road">Road/Block/Sector</string>
    <string name="permanent_address">Permanent Address</string>

    <string name="student_Id_Validation">You Should Put first 7 Digit of Your NSU Id</string>
    <string name="nid_validation">You should Put Your New Format(10 Digit) NID Number</string>
    <string name="phone_number_validation">You Should Put Your Number Within 11 Digit</string>
    <string name="registerd_student_list">All The Registered Student</string>
    <string name="search_sttudent">Please Search Sttudent By Id</string>
    <string name="personal_details">Personal Details</string>
    <string name="log_in_here">You Have To Log In Here</string>
    <string name="email">Your Email</string>
    <string name="password">Your Password</string>
    <string name="don_t_have_any_account">Don\'t Have Any Account? Sign Up</string>
    <string name="sign_up_here">You have To Sign Up Here</string>
    <string name="sign_up_first">Sign Up First</string>
    <string name="already_have_an_account">Already Have an Account? Sign In</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password?</string>


</resources>